--- a/src/app/features/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/features/admin/admin-dashboard/admin-dashboard.component.html
@@ -2,7 +2,7 @@
 
 <div class="main-container container">
     <div class="row data-card-container">
-        <div class="col-md-3 data-card" *ngFor="let data of dashboardData">
+        <div class="col-md-3 data-card" *ngFor="let data of dataCount">
             <h4>{{data.name}} in fitzee</h4>
             <h5>count: {{data.count}}</h5>
         </div>
