--- a/src/app/features/admin/user-management/user-management.component.html
+++ b/src/app/features/admin/user-management/user-management.component.html
@@ -2,5 +2,5 @@
 
 <div class="container">
     <h3>User Management</h3>
-    <app-data-table [Headers]="headers" [keyNames]="keynames" [tableData]="Data" [isUsers]="user"></app-data-table>
+    <app-data-table [Headers]="headers" [keyNames]="keynames" [tableData]="Data" [isUsers]="user" (sendTrigger)="updateVerification($event)"></app-data-table>
 </div>
