--- a/src/app/features/user/user-home/user-home.component.scss
+++ b/src/app/features/user/user-home/user-home.component.scss
@@ -17,9 +17,12 @@
 }
 
 .featured-news-row {
+  display: flex;
   height: 25rem;
 }
-
+.news-card{
+  display: flex;
+}
 .featured-news {
   height: 20rem;
 }
