--- a/src/app/features/user/user-home/user-home.component.html
+++ b/src/app/features/user/user-home/user-home.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="news-container container">
-        <div class="row mt-3 featured-news-row">
+        <div class="mt-3 featured-news-row">
             <h3 class="mb-2">Featured News</h3>
             <div class="col-md-4 featured-news">
                 <div class="featured-news-image mt-4">
@@ -28,7 +28,7 @@
             </div>
            
             <div class="col-md-7 other-featured-news">
-                <div class="row" *ngFor="let news of newsData">
+                <div class="news-card" *ngFor="let news of newsData">
                     <div class="other-news mt-3">
                         <div class="other-newsimage">
                             <img src="{{news.Image}}" alt="">
