--- a/src/app/features/admin/trainer/trainer/trainer.component.html
+++ b/src/app/features/admin/trainer/trainer/trainer.component.html
@@ -11,9 +11,9 @@
             </div>
             <div class="dashboard-nav">
                 <ul>
-                    <li><a [routerLink]="'#'">Dashboard Overview</a></li>
+                    <li><a [routerLink]="'/trainerdashboard'">Dashboard Overview</a></li>
                     <li><a [routerLink]="'#'">My Clients</a></li>
-                    <li><a [routerLink]="'#'">My Chat</a></li>
+                    <li><a [routerLink]="'/trainerchat'">My Chat</a></li>
                     <li><a [routerLink]="'#'" (click)="openProfilePictureDialog()" >profile updation</a></li>
                     <li><a [routerLink]="'#'" (click)="logout()">Log out</a></li>
                 </ul>
