--- a/src/app/features/user/user-profile/profile-sidebar/profile-sidebar.component.html
+++ b/src/app/features/user/user-profile/profile-sidebar/profile-sidebar.component.html
@@ -1,12 +1,12 @@
 <div class="main-container">
     <div class="sidebar-header">
-        <h4 class="mx-5 pt-4 text-light">Profile Sidebar</h4>
+        <h4 c class="mx-5 pt-4 text-light">Profile Sidebar</h4>
     </div>
     <div class="sub-headings-container">
         <div class="sub-headings">
             <h6 class="mx-5 text-light mt-5">
                 <span class="mx-2">>></span>
-                <a [routerLink]="['/userprofile/userprofileinfo']" class="text-light">Personal Info</a>
+                <a [routerLink]="['#']" class="text-light">Personal Info</a>
               </h6>
         </div>
         <div class="sub-headings">
@@ -24,7 +24,7 @@
         <div class="sub-headings">
             <h6 class="mx-5 text-light mt-5">
                 <span class="mx-2">>></span>
-                <a [routerLink]="['/userprofile/userprofileupdate']" class="text-light">Profile Updation</a>
+                <a [routerLink]="['#']" class="text-light">Profile Updation</a>
               </h6>
         </div>
     </div>
