--- a/src/app/features/user/user-home/user-home.component.html
+++ b/src/app/features/user/user-home/user-home.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="news-container container">
-        <h3 class="mb-2">Featured News</h3>
+        <h3 class="mb-2 mt-2">Featured News</h3>
         <div class="mt-3 featured-news-row">
             <div class="col-md-4 featured-news">
                 <div class="featured-news-image mt-4">
