--- a/src/app/features/user/user-profile/profile-info/profile-info.component.scss
+++ b/src/app/features/user/user-profile/profile-info/profile-info.component.scss
@@ -1,4 +1,8 @@
-.main-container {
+.full-container{
+    display: flex;
+}
+
+.main-container-profile-info {
     max-height: 28rem;
     overflow-y: auto;
     padding: 1rem;
@@ -60,5 +64,30 @@ h6 {
     .profile-pic {
         width: 10rem; 
         height: 10rem;
+    }
+}
+
+
+
+// sidebar
+.main-container{
+    background-color: rgb(35, 34, 34);
+    height: 28rem;
+    h4{
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+    h6{
+        font-family: Georgia, 'Times New Roman', Times, serif;
+    }
+    .sub-headings{
+        text-align: center;
+        margin-left: 0.5rem;
+        width: 17rem;
+        height: 2rem;
+        background-color: rgb(59, 61, 57);
+       
+    }
+    a{
+        text-decoration: none;
     }
 }
