--- a/src/app/features/admin/reports/reports.component.html
+++ b/src/app/features/admin/reports/reports.component.html
@@ -4,5 +4,5 @@
 <div class="container">
     <h3>Fitzee Reports</h3>
     <app-data-table [Headers]="headers" [keyNames]="keynames" [tableData]="Data"
-        [isUsers]="user"></app-data-table>
+        [isUsers]="user" [itemName]="'reports'" [totalAmount]="TotalAmount"></app-data-table>
 </div>
