--- a/src/app/features/admin/trainer/trainer/user-details/user-details.component.html
+++ b/src/app/features/admin/trainer/trainer/user-details/user-details.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-4">
     <div class="card">
-        <div class="card-header bg-primary text-white">
+        <div *ngIf="user" class="card-header bg-primary text-white">
             <h4>{{ user.Name }}</h4>
             <small>{{ user.Email }}</small>
         </div>
