--- a/src/app/features/user/packages/packages.component.scss
+++ b/src/app/features/user/packages/packages.component.scss
@@ -5,7 +5,7 @@ body {
   }
   
   .carousel-container {
-    background-image: url('../../../../assets/public/package_carousal2.jpg');
+    background-image: url('../../../../assets/public/package-carousal.jpg');
     width: 100%;
     height: 22rem;
     background-size: cover;
@@ -29,11 +29,11 @@ body {
     text-align: center;
   }
   
-  /* Desktop styles */
+  
   .packages-container {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-wrap: wrap; 
+    justify-content: space-between;
     margin-top: 2rem;
     max-width: 100%;
     padding: 0 2rem;
@@ -41,11 +41,10 @@ body {
   
   .package-cards {
     background-color: rgb(154, 194, 244);
-    width: 20rem;
-    height: 22rem;
+    width: 30%; 
+    height: 21rem;
     border-radius: 2rem;
-    margin-top: 2rem;
-    margin-left: 5rem;
+    margin-bottom: 2rem;
   }
   
   .package-cards img {
@@ -53,12 +52,12 @@ body {
     margin-left: 1rem;
     margin-top: 1rem;
     width: 18rem;
-    height: 10rem;
+    height: 9rem;
   }
   
   .package-details {
     margin-top: 1rem;
-    margin-left: 2rem;
+    margin-left: 1.5rem;
   }
   
   
@@ -81,7 +80,6 @@ body {
     .package-cards {
       width: 100%; 
       height: auto;
-      margin-left: 0;
       margin-top: 1rem;
     }
   
