--- a/src/app/shared/Forms/edit-item/edit-item.component.html
+++ b/src/app/shared/Forms/edit-item/edit-item.component.html
@@ -15,12 +15,13 @@
 
             <div class="form-group">
                 <label class="form-label" for="description">Description</label>
-                <input type="text" class="form-control" placeholder="Enter description" formControlName="description">
+                <textarea class="form-control" placeholder="Enter description" formControlName="description"></textarea>
                 <div *ngIf="editForm.get('description')?.touched && editForm.get('description')?.invalid" class="text-danger">
                     <div *ngIf="editForm.get('description')?.errors?.['required']">Description is required.</div>
                     <div *ngIf="editForm.get('description')?.errors?.['noSpaces']">Description cannot be just spaces.</div>
                 </div>
             </div>
+            
 
             <div class="form-group">
                 <label class="form-label" for="image">Image</label>
