--- a/src/app/shared/utils/chat-rooms/chat-rooms.component.html
+++ b/src/app/shared/utils/chat-rooms/chat-rooms.component.html
@@ -10,7 +10,8 @@
         <div *ngFor="let room of rooms" class="user-chat-rooms">
           <div (click)="check(room._id)" class="chat-room mt-3">
             <div class="profile-pic-container">
-              <img class="profile-pic" [src]="'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTrTPjHOG0LBJKLlx35kYcK4hpx5xRdGNQ4tQ&s'" alt="Profile Picture">
+              <img *ngIf="room.trainerDetails?.Image" class="profile-pic" src="{{room.trainerDetails.Image}}" alt="Profile Picture">
+              <img *ngIf="!room.trainerDetails?.Image" class="profile-pic" src="../../../../assets/public/blank-profile-picture.webp" alt="Profile Picture">
             </div>
             <div class="room-name">
               <h5>{{room.trainerDetails?.Name}}</h5>
@@ -28,12 +29,12 @@
   
       <!-- Trainer Chat Rooms -->
       <div *ngIf="user !== 'user'" class="rooms">
-        <!-- <button type="button" class="btn btn-sm btn-primary" (click)="check2()">check Chat</button> -->
         <button type="button" class="btn btn-sm btn-primary" (click)="createRoom()">New Chat</button>
         <div *ngFor="let room of rooms" class="trainer-chat-rooms">
           <div (click)="check(room._id)" class="chat-room mt-3">
             <div class="profile-pic-container">
-              <img class="profile-pic" [src]="'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTrTPjHOG0LBJKLlx35kYcK4hpx5xRdGNQ4tQ&s'" alt="Profile Picture">
+              <img *ngIf="room.userDetails?.PersonalDetails?.Image" class="profile-pic" src="{{room.userDetails.PersonalDetails.Image}}" alt="">
+              <img *ngIf="!room.userDetails?.PersonalDetails?.Image" class="profile-pic" src="../../../../assets/public/blank-profile-picture.webp" alt="">
             </div>
             <div class="room-name">
               <h5>{{room.userDetails?.Name}}</h5>
