--- a/src/app/shared/utils/chat-space/chat-space.component.scss
+++ b/src/app/shared/utils/chat-space/chat-space.component.scss
@@ -1,9 +1,9 @@
 .main-container{
-    width: 57rem;
-    height: 37.4rem;
+    width: 51rem;
+    height: 34rem;
     border-radius: 1.5rem;
     background-color: #fff;
-    margin-left: .7rem;
+    margin-left: 1rem;
     margin-top: .5rem;
     position: relative;
 }
@@ -35,13 +35,13 @@
     padding-right: 3rem;
     margin-top: 2.5rem;
     i{
-        font-size: 1.6rem;
+        font-size: 1.3rem;
         margin-left: 3.5rem;
     }
 }
 .messages-container{
     margin-top: 1rem;
-    height: 24rem;
+    height: 20rem;
     overflow-y: auto;
     padding: 1rem;
     scrollbar-width: none;
@@ -76,7 +76,7 @@
     margin-left: auto; 
 }
 .message-areas{
-    width: 50rem;
+    width: 49rem;
     background-color: rgb(164, 179, 179);
     height: 4rem;
     border-radius: 1.5rem;
@@ -84,6 +84,7 @@
     bottom: 0;
     left: 50%;
     transform: translateX(-53%);
+    margin-left: 1rem;
     margin-bottom: 1rem;
     display: flex;
     align-items: center;
@@ -105,6 +106,6 @@
 .chat-icons{
     i{
         margin-left: 1rem;
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
 }
