--- a/src/app/shared/utils/data-table/data-table.component.scss
+++ b/src/app/shared/utils/data-table/data-table.component.scss
@@ -1,54 +1,68 @@
 .container {
-    padding: 20px; /* Padding around the container */
-    background-color: #f8f9fa; /* Light background color for contrast */
-    border-radius: 8px; /* Rounded corners */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow effect */
+    padding: 20px; 
+    background-color: #f8f9fa; 
+    border-radius: 8px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
 }
 
 .table {
-    background-color: white; /* White background for the table */
-    border-radius: 8px; /* Rounded corners for the table */
-    overflow: hidden; /* Prevent overflow */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Shadow for the table */
+    background-color: white; 
+    border-radius: 8px;
+    overflow: hidden; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
 }
 
 .table th, .table td {
-    vertical-align: middle; /* Center align content */
-    text-align: center; /* Center align text */
+    vertical-align: middle; 
+    text-align: center;
 }
 
 .btn {
-    transition: background-color 0.3s, transform 0.2s; /* Smooth transition for buttons */
+    transition: background-color 0.3s, transform 0.2s;
 }
 
 .btn:hover {
-    transform: scale(1.05); /* Slightly enlarge button on hover */
+    transform: scale(1.05); 
 }
 
 .btn-primary {
-    background-color: #007bff; /* Bootstrap primary color */
-    border: none; /* Remove border */
+    background-color: #007bff; 
+    border: none; 
 }
 
 .btn-dark {
-    background-color: #343a40; /* Bootstrap dark color */
-    border: none; /* Remove border */
+    background-color: #343a40; 
+    border: none; 
 }
 
 .btn-danger {
-    background-color: #dc3545; /* Bootstrap danger color */
-    border: none; /* Remove border */
+    background-color: #dc3545; 
+    border: none; 
 }
 
 .image {
-    height: 3rem; /* Set image height */
-    width: 3rem; /* Set image width */
-    border-radius: 50%; /* Circular image */
-    object-fit: cover; /* Ensure the image covers the area */
+    height: 3rem; 
+    width: 3rem; 
+    border-radius: 50%;
+    object-fit: cover; 
 }
 
 .pagination-buttons {
-    display: flex; /* Flexbox for pagination buttons */
-    justify-content: center; /* Center pagination buttons */
-    margin-top: 20px; /* Space above pagination */
+    display: flex; 
+    justify-content: center; 
+    margin-top: 20px; 
+}
+.search-bar{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 3rem;
+    input{
+        width: 10rem;
+        margin-right: 1rem;
+    }
+}
+.filter-sort-container{
+    button{
+        margin-left: 1rem;
+    }
 }
